
classDiagram
    class Main {
        +main() str
    }
    class SQLInjection {
        +exploit(target_url: str) str
    }
    class XSSAttack {
        +exploit(target_url: str) str
    }
    class AuthBypass {
        +exploit(target_url: str) str
    }
    Main --> SQLInjection
    Main --> XSSAttack
    Main --> AuthBypass
